--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tailwind-stepper",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "A UI component library for React and Next",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -22,6 +22,8 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.0.10",
     "rollup": "^3.20.2",
