--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tailwind-stepper",
-  "version": "1.0.4",
-  "description": "A UI component library for React and Next",
+  "version": "1.0.5",
+  "description": "A UI stepper component for React and Next",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
