--- a/.npmignore
+++ b/.npmignore
@@ -18,7 +18,7 @@ src/
 tsconfig.json
 
 # Ignore Rollup configuration files
-rollup.config.js
+rollup.config.mjs
 
 # Ignore version control files
 .git/
