feat:  add dr-github-config

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "Chinmaya Sa",
   "license": "MIT",
   "keywords": [
+    "tailwind-stepper",
     "react",
     "next",
     "typescript",
