refactor: update language setting in .drgit.yml from Bhojpuri to English (United States)

--- a/.drgit.yml
+++ b/.drgit.yml
@@ -1,5 +1,5 @@
 # model: "gpt-4o-mini"
-language: "Bhojpuri (India)"
+language: "English (Unisted States)"
 # early-access: false
 review:
   enabled: false
