refactor: enable review feature in .drgit.yml and update pull request settings

--- a/.drgit.yml
+++ b/.drgit.yml
@@ -2,5 +2,9 @@
 language: "English (Unisted States)"
 # early-access: false
 review:
-  enabled: false
+  enabled: true
   tone: "informal"
+  allow:
+    pull-requests:
+      never: ["meness"]
+      contributors-only: true
